Add unit test that opens the SSA graph graphviz image using Swing